--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.sebdeveloper6952.amberflutter.amberflutter">
   <queries>
-    <package android:name="com.greenart7c3.nostrsigner"/>
-    <package android:name="com.github.haorendashu.nowser"/>
+    <intent>
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="nostrsigner" />
+    </intent>
   </queries>
 </manifest>
